deps/v8/test/message/fail/destructuring-undefined-computed-property.out
*%(basename)s:5: TypeError: Cannot destructure 'undefined' or 'null'.
var { [x] : y } = undefined;
    ^
TypeError: Cannot destructure 'undefined' or 'null'.
    at *%(basename)s:5:5
